fixed background photos not showing up

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -12,7 +12,7 @@ html{
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: url(images/autumnBackground.jpg);
+    background-image: url("/html/images/autumnBackground.png");
     background-repeat: no-repeat;
     background-position: 0%;
     background-attachment: fixed;
@@ -158,7 +158,7 @@ border-top: none;
 /* Adds invalid symbol to userForm fields */
 .userForm input:required:invalid,
 .userForm input:focus:invalid {
-  background-image: url(images/invalid.png);
+  background-image: url("/html/images/invalid.png");
   background-position: center;
   background-repeat: no-repeat;
   background-position-x: 295px;
@@ -167,7 +167,7 @@ border-top: none;
 
 /* Adds valid symbol to userForm fields */
 .userForm input:required:valid {
-  background-image: url(images/valid.png);
+  background-image: url("/html/images/valid.png");
   background-position: center;
   background-repeat: no-repeat;
   background-position-x: 287px;
@@ -274,7 +274,7 @@ border-top: none;
   align-items: center;
   height: 100vh;
   margin: 0;
-  background: url(images/autumnBackground.jpg);
+  background-image: url("/html/images/autumnBackground.png");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size:cover;
